salesforce/force-app/main/default/objects/Policy_Document__c/Policy_Document__c.object-meta.xml
<CustomObject>
    <description>Company compliance policy documents uploaded by internal Procurement users. Each record tracks the ingestion status of its source file into the RAG policy corpus (policy_chunk in the engine&apos;s Postgres/pgvector store).</description>
    <label>Policy Document</label>
    <nameField>
        <displayFormat>POL-{0000}</displayFormat>
        <label>Policy Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>