salesforce/force-app/main/default/objects/Policy_Document__c/fields/Chunk_Count__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Count__c</fullName>
    <description>Number of policy_chunk rows produced from this document by /policy/ingest.</description>
    <label>Chunk Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>