salesforce/force-app/main/default/objects/Policy_Document__c/fields/Corpus_Version__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Version__c</fullName>
    <description>Version tag applied to this document's chunks in policy_chunk (ingest-date based, same scheme as ingest_policies.py).</description>
    <label>Corpus Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>