salesforce/force-app/main/default/objects/Policy_Document__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Compliance domain this policy belongs to. Leave blank to let the engine auto-detect via keyword scoring (guess_domain); set explicitly to override.</description>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Detect</fullName>
                <default>true</default>
                <label>Auto-Detect</label>
            </value>
            <value>
                <fullName>conflict</fullName>
                <label>Conflict Minerals</label>
            </value>
            <value>
                <fullName>trade</fullName>
                <label>Trade / Sanctions</label>
            </value>
            <value>
                <fullName>finance</fullName>
                <label>Finance / KYC</label>
            </value>
            <value>
                <fullName>quality</fullName>
                <label>Quality</label>
            </value>
            <value>
                <fullName>material</fullName>
                <label>Material Safety</label>
            </value>
            <value>
                <fullName>cyber</fullName>
                <label>Cyber / Data Protection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>