salesforce/force-app/main/default/objects/Policy_Document__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Error message from /policy/ingest or the Apex callout when Status__c = Failed.</description>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>