salesforce/force-app/main/default/objects/Policy_Document__c/fields/Ingest_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Ingest_Job_Id__c</fullName>
    <description>The engine&apos;s in-memory background-job id for this document&apos;s ingest run (returned by POST /policy/ingest, polled via GET /policy/ingest/status/{jobId}). Set by PolicyIngestQueueable when it submits the job, cleared once the job reaches a terminal state (done/failed). Ingestion is async because a 40-100 page PDF can take longer to parse/embed than Salesforce&apos;s 120s callout ceiling allows.</description>
    <label>Ingest Job Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>