salesforce/force-app/main/default/objects/Policy_Document__c/fields/Ingested_Date__c.field-meta.xml
<CustomField>
    <fullName>Ingested_Date__c</fullName>
    <description>Timestamp when /policy/ingest confirmed this document&apos;s chunks were upserted into policy_chunk.</description>
    <label>Ingested Date</label>
    <type>DateTime</type>
</CustomField>