salesforce/force-app/main/default/objects/Policy_Document__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <description>ContentDocument Id of the uploaded policy file (same pattern as Compliance_Document__c.Source_File__c).</description>
    <label>Source File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>